# omf-small-buildings-analysis

./: .gitignore  detecting-car-footprints.ipynb  pyproject.toml
data/: small-buildings-0-10-sample.parquet  small-buildings-10-15-sample.parquet  small-buildings-hq-10-15-sample-w-labels.parquet
