[project]
name = "omf-small-buildings-analysis"
version = "0.1.0"
description = ""
readme = ""
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.0",
    "folium>=0.19.4",
    "geopandas>=1.0.1",
    "h3>=4.2.2",
    "hdbscan>=0.8.40",
    "ipyevents>=2.0.2",
    "ipywidgets>=8.1.5",
    "lightgbm>=4.6.0",
    "mapclassify>=2.8.1",
    "matplotlib>=3.9.4",
    "mercantile>=1.2.1",
    "mlxtend>=0.23.4",
    "momepy>=0.9.0",
    "networkx>=3.2.1",
    "notebook>=7.4.3",
    "numba>=0.61.0",
    "numpy>=2.0.2",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "rasterio>=1.4.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "shap>=0.46.0",
    "umap-learn>=0.5.7",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
]
